--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@discordjs/builders": "^1.10.1",
+    "axios": "^1.8.2",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "sequelize": "^6.37.6",
